--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Static list of goods</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
   </body>
 </html>
